Chock full o' changes * Added optional item names * Added filtering in shop menu * Added LoreList (helper for making lists in lore) * Add military-grade anti-null item defense * Clear chest post-importing (see null defense)